@@ -30,15 +30,12 @@ AudioControlPage::~AudioControlPage()
 
 }
 
-void AudioControlPage::SetupAudioMixer(wxString channels)
+void AudioControlPage::InitAudioChannels(wxString channels)
 {
 	if (channels.IsEmpty())
 		return;
 	m_audioChannels.Clear();
-	wxSizer * AudioSizer = m_audioPanel->GetSizer();
-	wxStaticText * noAudio = (wxStaticText *) FindWindow(_("NoAudioText"));
-	AudioSizer->Remove(0);
-	delete noAudio;
+	m_audioChannels.Add("master;;master");
 	int pos;
 	wxString temp = channels;
 	do
@@ -52,12 +49,24 @@ void AudioControlPage::SetupAudioMixer(wxString channels)
 	}while (pos !=-1);
 	if (!temp.IsEmpty()) // not everything parsed ?
 		m_audioChannels.Add(temp);
+}
+
+void AudioControlPage::AddChannelType(int channel,wxString type)
+{
+	m_audioChannels[channel] = type + _(";;") + m_audioChannels[channel];
+}
+
+void AudioControlPage::SetupAudioMixer()
+{
+	wxSizer * AudioSizer = m_audioPanel->GetSizer();
+	wxStaticText * noAudio = (wxStaticText *) FindWindow(_("NoAudioText"));
+	AudioSizer->Remove(0);
+	delete noAudio;
+	
 	ConvertChannelNames (m_audioChannels);
 	for (unsigned int i=0;i<m_audioChannels.GetCount();i++){
 		AddChannel (m_audioChannels[i],i);
 	}
-
-//	GetSizer()->Fit(this); 
 }
 
 void AudioControlPage::DestroyAudioMixer()
@@ -99,15 +108,19 @@ void AudioControlPage::DestroyAudioMixer()
 
 void AudioControlPage::AddChannel(wxString labeltext, int channelnumber)
 {
+	wxSize defaultsize;
+#ifdef __WINDOWS__
+	defaultsize = wxDefaultSize;
+#else
+	defaultsize = wxSize(40,18);
+#endif
+	
 	int i;
-//	if (labeltext.Len()>9)
-//		labeltext=labeltext.Left(9);
-//		labeltext.append(_("\n"));
 	wxSizer * AudioSizer = m_audioPanel->GetSizer();
-	wxString choices[3]={_("M"), _("L"), _("R")};		
+	wxString choices1[3]={_("M"), _("L"), _("R")};
+	wxString choices2[1]={_("S")};
 	wxString number;
 	number.sprintf("%u",channelnumber);
-//	m_audioChannels.Add(labeltext);
 	wxStaticText * label = new wxStaticText(m_audioPanel, -1, labeltext.Mid(0,labeltext.Find("::")),
 					wxDefaultPosition, wxDefaultSize,0,
 					wxString(_("AudioLabel_")+number));
@@ -116,16 +129,21 @@ void AudioControlPage::AddChannel(wxString labeltext, int channelnumber)
 					wxString(_("AudioSlider_")+number));
 	wxComboBox * combo = NULL;
 	wxButton * button = NULL;
-	if (channelnumber !=0){
+	if (GetAudioChannelType(channelnumber).Mid(0,9) == _("MoonSound")){
 		combo = new wxComboBox(m_audioPanel,FIRSTAUDIOCOMBO+channelnumber,
-				_("M"), wxDefaultPosition,wxDefaultSize,3,choices,wxCB_READONLY,
+				_("S"), wxDefaultPosition,defaultsize,1,choices2,wxCB_READONLY,
 				wxDefaultValidator,wxString(_("AudioMode_")+number));
 	}
-	else{
+	else if (GetAudioChannelType(channelnumber) == _("master")){	
 		button = new wxButton(m_audioPanel,-1,_("Mute"), wxDefaultPosition,
 				wxDefaultSize,0,wxDefaultValidator,wxString(_("_MuteButton")));
 	}
-
+	else {	
+		combo = new wxComboBox(m_audioPanel,FIRSTAUDIOCOMBO+channelnumber,
+				_("M"), wxDefaultPosition,defaultsize,3,choices1,wxCB_READONLY,
+				wxDefaultValidator,wxString(_("AudioMode_")+number));
+	}
+	
 	wxBoxSizer * sizer = new wxBoxSizer(wxVERTICAL);
 		
 		sizer->Add(label, 0, wxALIGN_CENTER_HORIZONTAL,0);
@@ -154,47 +172,31 @@ void AudioControlPage::ConvertChannelNames(wxArrayString & names)
 	unsigned int i;
 	wxArrayString In;
 	wxArrayString Out;
-	names.Add(_("master"));
 	In.Add(_("master"));Out.Add(_("a master\n"));
-	In.Add(_("keyclick"));Out.Add(_("b click\n"));
-	In.Add(_("psg"));Out.Add(_("c PSG\n"));
-	In.Add(_("PCM"));Out.Add(_("d PCM\n"));
-	In.Add(_("MSX Music"));Out.Add(_("e Music\n"));
-	In.Add(_("FM PAC"));Out.Add(_("f FMPac\n"));
-	In.Add(_("Empty SCC Cartridge"));Out.Add(_("g SCC\n"));
-	In.Add(_("SCC+ Cartridge"));Out.Add(_("h SCC+\n"));
-	In.Add(_("MSX-Audio"));Out.Add(_("i Audio\nFM"));
-	In.Add(_("MSX-Audio_DAC"));Out.Add(_("j Audio\nDAC"));
-	In.Add(_("MoonSoundFM"));Out.Add(_("l MSnd\nFM"));
-	In.Add(_("MoonSoundWave"));Out.Add(_("m MSnd\nWave"));
-	In.Add(_("cassetteplayer"));Out.Add(_("n tape\n"));
+	In.Add(_("1-bit click generator"));Out.Add(_("b click\n"));
+	In.Add(_("PSG"));Out.Add(_("c PSG\n"));
+	In.Add(_("Turbo-R PCM"));Out.Add(_("d PCM\n"));
+	In.Add(_("MSX-MUSIC"));Out.Add(_("e Music\n"));
+	In.Add(_("Konami SCC"));Out.Add(_("g SCC\n"));
+	In.Add(_("Konami SCC+"));Out.Add(_("h SCC+\n"));
+	In.Add(_("MSX-AUDIO"));Out.Add(_("i Audio\nFM"));
+	In.Add(_("MSX-AUDIO 13-bit DAC"));Out.Add(_("j Audio\nDAC"));
+	In.Add(_("MoonSound FM-part"));Out.Add(_("l MSnd\nFM"));
+	In.Add(_("MoonSound wave-part"));Out.Add(_("m MSnd\nWave"));
+	In.Add(_("Majutsushi DAC"));Out.Add(_("o Majutsu\nDAC"));
+	In.Add(_("Konami Synthesizer DAC"));Out.Add(_("p Konami\nSynth"));
+	In.Add(_("Play samples via your printer port."));Out.Add(_("q Simple"));
+	In.Add(_("Cassetteplayer, use to read .cas or .wav files."));Out.Add(_("z tape\n"));
 	
 	for (i=0;i<names.GetCount();i++){
 		unsigned int InIndex = 0;
 		bool found = false;
 		while ((InIndex < In.GetCount()) && (found == false)){
-			if (names[i] == In[InIndex]){
+			if (GetAudioChannelType(i) == In[InIndex]){
 				names[i] = Out[InIndex]+ _("::") + names[i];
 				found = true;
 			}
 			InIndex++;
-		}
-		if (!found){
-			if (names[i].Find(_("MSXRom")) != -1){
-				names[i]=_("o Cart\n")+names[i].substr(6) + _("::")+names[i];
-			}
-			else // shorten the name
-			{
-				if (names[i].Len()>18){
-					names[i]=_("z ")+names[i].Mid(0,9)+"\n"+names[i].Mid(9,9)+_("::")+names[i];
-				} 
-				else if (names[i].Len() >9){
-					names[i]=_("z ")+names[i].Mid(0,9)+"\n"+names[i].Mid(9)+_("::")+names[i];
-				}
-				else {
-					names[i]=_("z ")+names[i]+_("\n::")+names[i];
-				}
-			}
 		}
 	}
 
@@ -231,6 +233,8 @@ void AudioControlPage::OnChangeMode(wxCommandEvent & event)
 	case 'R':
 		value = _("right");
 		break;
+	case 'S':
+		value = _("stereo");
 	default:
 		break;
 	}
@@ -241,9 +245,35 @@ void AudioControlPage::OnChangeMode(wxCommandEvent & event)
 
 wxString AudioControlPage::GetAudioChannelName (int number)
 {
-	wxString temp = m_audioChannels[number].Mid(m_audioChannels[number].Find("::")+2);
+	wxString temp;
+	int pos = m_audioChannels[number].Find(";;");
+	if (pos == -1){
+		temp = m_audioChannels[number];
+	}
+	else{
+		temp = m_audioChannels[number].Mid(pos+2);
+	}
 	temp.Replace (" ","\\ ",true);	
 	return wxString(temp);
+}
+
+wxString AudioControlPage::GetAudioChannelType (int number)
+{
+	wxString temp;
+	int pos2 = m_audioChannels[number].Find(";;");
+	if (pos2 == -1){
+		return wxString(_(""));
+	}
+	int pos = m_audioChannels[number].Find("::");
+	if (pos == -1){
+		temp = m_audioChannels[number].Mid(0,pos2);
+	}
+	else{
+		temp = m_audioChannels[number].Mid(pos+2,pos2-pos-2);
+	}
+	temp.Replace ("\n"," ",true);
+	return wxString(temp);
+	
 }
 
 int AudioControlPage::GetNumberOfAudioChannels ()
@@ -265,6 +295,7 @@ void AudioControlPage::SetChannelMode (int number, wxString value)
 	if (value==_("mono")) val = _("M");
 	if (value==_("left")) val = _("L");
 	if (value==_("right")) val = _("R");
+	if (value==_("stereo")) val = _("S");
 	wxComboBox * combo = (wxComboBox *)FindWindowById(number+FIRSTAUDIOCOMBO,this);
 	combo->SetValue(val);
 }
