@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.17 2004/03/20 15:11:20 h_oudejans Exp $
+$Id: ChangeLog,v 1.18 2004/03/20 19:53:31 manuelbi Exp $
+
+2004-03-21 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* use openmsx_info sounddevice <device> to query the devicetype.
+	* Moonsound devices are now noted as stereo.
+	* linux comboboxwidth in audiomixer is for now fixed on 40 pixels.
 
 2004-03-20 Manuel Bilderbeek <manuel@msxnet.org>
 	* added frames per second display in status bar
